#6 fix logic order-service done placeOrder