@@ -8,6 +8,7 @@ import com.example.orderservice.model.Order;
 import com.example.orderservice.model.OrderItem;
 import com.example.orderservice.repository.OrderRepository;
 import com.example.orderservice.request.DecreaseStockRequest;
+import jakarta.servlet.http.HttpServletRequest;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -15,6 +16,7 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,20 +24,26 @@ public class OrderServiceImpl implements OrderService {
     private final OrderRepository orderRepository;
     private final StockServiceClient stockServiceClient;
 
-    @Transactional
+//    @Transactional
     @Override
-    public Order placeOrder(String userId) {
-        CartDto cartDto = stockServiceClient.getCart(userId).getBody();
-        assert cartDto != null;
+    public Order placeOrder(HttpServletRequest request) {
+        String author = request.getHeader("Authorization");
+        CartDto cartDto = stockServiceClient.getCart(author).getBody();
+
+        if (cartDto == null) {
+            throw new RuntimeException("Cart not found or empty");
+        }
+
         Order order = createOrder(cartDto);
+
         List<OrderItem> orderItems = createOrderItems(order, cartDto);
         order.setOrderItems(orderItems);
         order.setTotalPrice(calculateTotalPrice(orderItems));
-        stockServiceClient.clearCartByCartId(cartDto.getId());
+//        stockServiceClient.clearCartByCartId(cartDto.getId());
         return orderRepository.save(order);
     }
 
-    private Order createOrder(CartDto cartDto){
+    protected Order createOrder(CartDto cartDto){
         Order order = Order.builder()
                 .userId(cartDto.getUserId())
                 .orderStatus(OrderStatus.PENDING)
@@ -45,7 +53,7 @@ public class OrderServiceImpl implements OrderService {
         return orderRepository.save(order);
     }
 
-    private List<OrderItem> createOrderItems(Order order, CartDto cartDto){
+    protected List<OrderItem> createOrderItems(Order order, CartDto cartDto){
         return cartDto.getItems().stream().map(cartItemDto -> {
             ProductDto productDto = stockServiceClient.getProductById(cartItemDto.getProductId()).getBody();
             if(productDto == null)
@@ -54,24 +62,28 @@ public class OrderServiceImpl implements OrderService {
             DecreaseStockRequest request = new DecreaseStockRequest();
             request.setProductId(cartItemDto.getProductId());
             request.setQuantity(cartItemDto.getQuantity());
-            ResponseEntity<?> response = stockServiceClient.decreaseStock(request);
-            if (!response.getStatusCode().is2xxSuccessful())
-                throw new RuntimeException("Failed to decrease stock for product: " + cartItemDto.getProductId());
+            stockServiceClient.decreaseStock(request);
 
             return OrderItem.builder()
                     .productId(cartItemDto.getProductId())
                     .quantity(cartItemDto.getQuantity())
                     .unitPrice(cartItemDto.getUnitPrice())
                     .totalPrice(cartItemDto.getTotalPrice())
-                    .orderId(order.getId())
+                    .order(order)
                     .build();
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
-    private double calculateTotalPrice(List<OrderItem> orderItems) {
+    protected double calculateTotalPrice(List<OrderItem> orderItems) {
         return orderItems.stream()
                 .mapToDouble(item -> item.getUnitPrice() * item.getQuantity())
                 .sum();
+    }
+
+    @Override
+    public CartDto getCartByUserId(HttpServletRequest request) {
+        String author = request.getHeader("Authorization");
+        return stockServiceClient.getCart(author).getBody();
     }
 
     @Override
